<resources>
    <string name="app_name">FS_HubTest</string>
    <string name="fs_name">FluidSecureHubTest</string>
    <string name="add">2901 Crescent Drive
                        Tallahassee, FL 32301
                        850-878-4585
                        support@trakeng.com
                        www.trakeng.com</string>
    <string name="arrow">\u2B06</string>
    <string name="arrow_uni_code">\u2191</string>
    <string name="start_fueling">Start Fueling</string>
    <string name="fuel_another">Fuel Another</string>
    <string name="stop_fueling">Stop Fueling</string>
    <string name="fuel_history">Fuel History</string>
    <string name="regi">Registration</string>
    <string name="support_line"><u>For 24/7 Support</u></string>
    <string name="no_internet">The system has detected that you do not have cellular service and offline options are not enabled. Please contact your Manager.</string>
    <string name="server_connection_problem">The system has detected that you do not have cellular service and offline options are not enabled. Please contact your Manager.</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_fob_reader">FobReader</string>
    <string name="selectHose">Tap here to select hose</string>
    <string name="selectHoseToUse">Select hose to use</string>
    <string name="HoseOutOfOrder">Hose out of order</string>
    <string name="GO">GO</string>
    <string name="Cancel">Cancel</string>
    <string name="previousScreen">Previous Screen</string>
    <string name="LinkIsConnecting">Connecting...</string>
    <string name="EnterDeptNumber">Enter Department</string>
    <string name="EnterOdoManually">Enter Odometer Manually</string>
    <string name="PressFor123">Press for 123</string>
    <string name="PressForABC">Press for ABC</string>
    <string name="ReturnBtn">Return</string>
    <string name="BeforeStartFueling">YOU MAY BEGIN FUELING</string>
    <string name="OdometerEntry">Odometer Entry:</string>
    <string name="StartBtn">START</string>
    <string name="firstTimeUseMessage">This is the first time you are using the system. Please be sure the quantity shown on the display matches the final quantity on the dispenser. If not, please be sure to call in to Support</string>
    <string name="TryAgainLater">Please try again later</string>
    <string name="HoseInUseRetry">Hose In Use. Please retry once the ongoing transaction has been completed.</string>
    <string name="RegistrationNotApproved">Your registration has not been approved. Please contact your Manager.</string>
    <string name="MakeSureBTMacIsSet">Please make sure BT mac is set.</string>
    <string name="PairNewLink">Pair new LINK</string>
    <string name="DeviceName">Device Name</string>
    <string name="DeviceMacAddress">Device Mac Address</string>
    <string name="IMEIAlreadyExist">Your IMEI Number already EXISTS!</string>
    <string name="CloseBtn">Close</string>
    <string name="AddLink">Add LINK</string>
    <string name="CloseApp">Close App</string>
    <string name="RestartApp">Restart App</string>
    <string name="ShowReaderStatus">Show Reader Status</string>
    <string name="RebootReader">Reboot reader</string>
    <string name="ReconnectBLEReaders">Reconnect BLE Readers</string>
    <string name="OnlineMenu">Online</string>
    <string name="OfflineMenu">Offline</string>
    <string name="CameraMenu">Camera</string>
    <string name="ReloadMenu">Reload</string>
    <string name="TestTransactionMenu">Test Transaction</string>
    <string name="ForceOfflineListMenu">Force Offline List</string>
    <string name="PleaseWaitForHotspotConnect">Connecting to the hotspot. Please wait...</string>
    <string name="EmptyTankWarning">This tank level is low. Please contact your Manager.</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="action_settings">Settings</string>
    <string name="action_clear">Clear</string>
    <string name="action_about">About AJ Demo</string>
    <string name="hello_world">Hello world!</string>
    <string name="pref_title_device">Device</string>
    <string name="pref_title_firmware_version">Firmware version</string>
    <string name="pref_title_status">Status</string>
    <string name="pref_title_battery_level">Battery level</string>
    <string name="pref_title_sleep_timeout">Sleep timeout</string>
    <string name="pref_title_reset">Reset</string>
    <string name="pref_title_sleep">Sleep</string>
    <string name="pref_title_swipe_count">Swipe count</string>
    <string name="pref_title_battery_status">Battery status</string>
    <string name="pref_title_data_received">Data received</string>
    <string name="pref_title_key_serial_number">Key serial number</string>
    <string name="pref_title_track_data">Track data</string>
    <string name="pref_title_track1_mac">Track 1 - MAC</string>
    <string name="pref_title_track2_mac">Track 2 - MAC</string>
    <string name="pref_title_track1">Track 1</string>
    <string name="pref_title_jis2_data">JIS2 data</string>
    <string name="pref_title_primary_account_number">Primary account number</string>
    <string name="pref_title_name">Name</string>
    <string name="pref_title_expiration_date">Expiration date</string>
    <string name="pref_title_service_code">Service code</string>
    <string name="pref_title_discretionary_data">Discretionary data</string>
    <string name="pref_title_track2">Track 2</string>
    <string name="pref_title_about_reader">About reader</string>
    <string name="pref_title_function">Function</string>
    <string name="pref_title_get_firmware_version">Get firmware version</string>
    <string name="pref_title_get_status">Get status</string>
    <string name="pref_title_set_sleep_timeout">Set sleep timeout</string>
    <string name="pref_title_reader_id">Reader ID</string>
    <string name="pref_title_custom_id">Custom ID</string>
    <string name="pref_title_device_id">Device ID</string>
    <string name="pref_title_get_custom_id">Get custom ID</string>
    <string name="pref_title_set_custom_id">Set custom ID</string>
    <string name="pref_title_get_device_id">Get device ID</string>
    <string name="pref_title_cryptographic_keys">Cryptographic keys</string>
    <string name="pref_title_new_master_key">New master key</string>
    <string name="pref_title_master_key">Master key</string>
    <string name="pref_title_aes_key">AES key</string>
    <string name="pref_title_set_master_key">Set master key</string>
    <string name="pref_title_set_aes_key">Set AES key</string>
    <string name="pref_title_use_default_key">Use default key</string>
    <string name="pref_title_dukpt_setup">DUKPT setup</string>
    <string name="pref_title_dukpt">DUKPT</string>
    <string name="pref_title_iksn">IKSN</string>
    <string name="pref_title_ipek">IPEK</string>
    <string name="pref_title_get_dukpt_option">Get DUKPT option</string>
    <string name="pref_title_set_dukpt_option">Set DUKPT option</string>
    <string name="pref_title_initialize_dukpt">Initialize DUKPT</string>
    <string name="pref_title_use_default_iksn_ipek">Use default IKSN &amp; IPEK</string>
    <string name="pref_title_track_data_setup">Track data setup</string>
    <string name="pref_title_encrypted_track1">Encrypted track 1</string>
    <string name="pref_title_encrypted_track2">Encrypted track 2</string>
    <string name="pref_title_masked_track1">Masked track 1</string>
    <string name="pref_title_masked_track2">Masked track 2</string>
    <string name="pref_title_get_track_data_option">Get track data option</string>
    <string name="pref_title_set_track_data_option">Set track data option</string>
    <string name="pref_title_picc">PICC</string>
    <string name="pref_title_atr">ATR</string>
    <string name="pref_title_timeout">Timeout</string>
    <string name="pref_title_card_type">Card type</string>
    <string name="pref_title_command_apdu">Command APDU</string>
    <string name="pref_title_response_apdu">Response APDU</string>
    <string name="pref_title_rf_config">RF configuration</string>
    <string name="pref_title_power_on">Power ON</string>
    <string name="pref_title_power_off">Power OFF</string>
    <string name="pref_title_transmit">Transmit</string>
    <string name="pref_title_set_rf_config">Set RF configuration</string>
    <string name="pref_title_icc">ICC</string>
    <string name="pref_title_power_action">Power action</string>
    <string-array name="power_action">
        <item>Power down</item>
        <item>Cold reset</item>
        <item>Warm reset</item>
    </string-array>
    <string name="pref_title_wait_timeout">Wait timeout</string>
    <string name="pref_title_protocol">Protocol</string>
    <string name="pref_title_t0">T=0</string>
    <string name="pref_title_t1">T=1</string>
    <string name="pref_title_active_protocol">Active protocol</string>
    <string name="pref_title_apdu">APDU</string>
    <string name="pref_title_power">Power</string>
    <string name="pref_title_set_protocol">Set protocol</string>
    <string name="pref_title_device_control">Device control</string>
    <string name="pref_title_control_code">Control code</string>
    <string name="pref_title_control_command">Control command</string>
    <string name="pref_title_control_response">Control response</string>
    <string name="pref_title_control">Control</string>
    <string name="pref_title_card_state">Card state</string>
    <string name="pref_title_update_card_state">Update card state</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="info">Information</string>
    <string name="message_track_data_error_corrupted">The track 1 and track 2 data may be corrupted. Please swipe the card again!</string>
    <string name="message_track1_data_error_corrupted">The track 1 data may be corrupted. Please swipe the card again!</string>
    <string name="message_track2_data_error_corrupted">The track 2 data may be corrupted. Please swipe the card again!</string>
    <string name="HUBName">HUB Name:</string>
    <string name="EnterBtn">Enter</string>
    <string name="RegisterBtn">Register</string>
    <string name="SubmitBtn">Submit</string>
    <string name="UserName">Username:</string>
    <string name="UserPassword">Password:</string>
    <string name="RequiredUserName">Please enter Username</string>
    <string name="RequiredUserPassword">Please enter Password</string>
    <string name="SaveBtn">Save</string>
    <string name="BtnAddTank">Add Tank</string>
    <string name="TankNumberHeading">Tank Number:</string>
    <string name="TankNumberHint">Tank Number</string>
    <string name="TankNameHeading">Tank Name:</string>
    <string name="TankNameHint">Tank Name</string>
    <string name="ProductHeading">Product:</string>
    <string name="BtnSelect">Select</string>
    <string name="SearchAddressHint">Search here..</string>
    <string name="TestTxnPINScreenHeading">Support Rep PIN</string>
    <string name="TestTxnPINScreenWarning">***This screen is for Support Personnel use only***</string>
</resources>