<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fff"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:padding="7sp"
            android:text="@string/BtnAddTank"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#fff"
            android:textSize="30dp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/tv_TankNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TankNumberHeading"
                    android:textColor="#444"
                    android:textSize="22sp" />

                <EditText
                    android:id="@+id/edt_TankNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:background="@color/colorFluid"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/white"
                    android:textColorHint="#fff"
                    android:ems="10"
                    android:maxWidth="200dp"
                    android:hint="@string/TankNumberHint"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:padding="5dp"
                    android:textSize="22sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/tv_TankName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TankNameHeading"
                    android:textColor="#444"
                    android:textSize="22sp" />

                <EditText
                    android:id="@+id/edt_TankName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:background="@color/colorFluid"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/white"
                    android:textColorHint="#fff"
                    android:ems="10"
                    android:maxWidth="200dp"
                    android:hint="@string/TankNameHint"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:padding="5dp"
                    android:textSize="22sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/tv_Product"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/ProductHeading"
                    android:textColor="#444"
                    android:textSize="22sp" />

                <Spinner
                    android:id="@+id/spin_Product"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp" />

            </TableRow>

        </TableLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/btnCancelMap"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@color/cancel_button"
                android:text="@string/Cancel"
                android:textSize="@dimen/go_button_text" />

            <Button
                android:id="@+id/btnSaveMap"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:background="@color/colorFluid"
                android:text="@string/SaveBtn"
                android:textColor="@color/white"
                android:textSize="@dimen/go_button_text" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>