<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="5">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/title_activity_maps"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#fff"
        android:textSize="30sp" />

    <AutoCompleteTextView
        android:id="@+id/tv_SearchAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="@drawable/layout_border"
        android:completionThreshold="3"
        android:dropDownHeight="200dp"
        android:hint="@string/SearchAddressHint"
        android:padding="10dp"
        android:textSize="20sp" />

    <!--<com.azure.android.maps.control.MapControl
        android:id="@+id/map_control"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        app:azure_maps_zoom="15" />-->

    <LinearLayout
        android:id="@+id/linearMap"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:orientation="vertical">

        <WebView
            android:id="@+id/map_control"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="0"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btnCancelMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@color/cancel_button"
            android:text="@string/Cancel"
            android:textSize="@dimen/go_button_text" />

        <Button
            android:id="@+id/btnSaveMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:background="@color/colorFluid"
            android:text="@string/BtnSelect"
            android:textColor="@color/white"
            android:textSize="@dimen/go_button_text" />

    </LinearLayout>
</LinearLayout>