<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    tools:context=".RegistrationActivity">


    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:elevation="5dp"
        android:src="@drawable/fuel_secure_lock"
        android:visibility="gone" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#ddd" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_margin="50dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/HUBName"
                android:textColor="#444"
                android:textSize="25dp" />


            <EditText
                android:id="@+id/etFName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textSize="25sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:text="Mobile"
                android:textColor="#444"
                android:textSize="25dp" />

            <EditText
                android:id="@+id/etMobile"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="5dp"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:textSize="25sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:text="Email"
                android:textColor="#444"
                android:textSize="25dp" />

            <AutoCompleteTextView
                android:id="@+id/etEmail"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="5dp"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:text="Company"
                android:textColor="#444"
                android:textSize="25dp" />

            <EditText
                android:id="@+id/etCompany"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="5dp"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:textSize="25sp" />


            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/save_button"
                android:text="@string/RegisterBtn"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_enter_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/UserName"
                android:textColor="#444"
                android:textSize="25dp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/edt_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:hint="@string/RequiredUserName"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textSize="25sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_enter_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/UserPassword"
                android:textColor="#444"
                android:textSize="25dp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:hint="@string/RequiredUserPassword"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:password="true"
                android:textSize="25sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnReplaceHub"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/save_button"
                android:text="@string/SubmitBtn"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="25sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="-"
                android:gravity="center"
                android:textColor="#444"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvVersionNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="-"
                android:gravity="center"
                android:textColor="#444"
                android:textSize="14sp" />






        </LinearLayout>
    </ScrollView>
</LinearLayout>
