<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="20dp">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/TestTxnPINScreenHeading"
                    android:textAllCaps="false"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/black"
                    android:textSize="@dimen/heading_text"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearPerso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="90dp"
                android:layout_marginRight="90dp"
                android:paddingTop="20dp"
                android:orientation="vertical">

                <!--<TextView
                    android:id="@+id/tv_enter_pin_no"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="20dp"
                    android:gravity="center"
                    android:text="@string/PersonnelNumberHeading"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/black"
                    android:textSize="35dp"
                    android:textStyle="bold" />-->

                <EditText
                    android:id="@+id/etPersonnelPin"
                    android:layout_width="350dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/colorFluid"
                    android:gravity="center"
                    android:imeOptions="actionDone"
                    android:inputType="numberPassword|textPassword"
                    android:maxLength="10"
                    android:padding="5sp"
                    android:password="true"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/white"
                    android:textColorHint="#fff"
                    android:textSize="@dimen/edit_text" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/Linear_layout_Save_back_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="80dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="5sp"
                    android:layout_marginRight="25dp"
                    android:layout_weight="1"
                    android:background="@color/backbtn"
                    android:text="@string/Cancel"
                    android:textColor="@color/black"
                    android:textSize="@dimen/previous_button_text" />

                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="10sp"
                    android:layout_weight="1"
                    android:background="@color/colorFluid"
                    android:text="@string/EnterBtn"
                    android:textColor="@color/white"
                    android:textSize="@dimen/go_button_text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="25dp">

                <TextView
                    android:id="@+id/tv_warning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/TestTxnPINScreenWarning"
                    android:textAllCaps="false"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="normal" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <!-- menu bar -->
    <include
        layout="@layout/activity_footer_keybord"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true" />

</RelativeLayout>